subtabs text alignment fixed

--- a/app/assets/themes/default/stylesheets/style.css.scss
+++ b/app/assets/themes/default/stylesheets/style.css.scss
@@ -293,7 +293,7 @@ input[type=button][disabled="disabled"], input[type=submit][disabled="disabled"]
 #systems-result {
   overflow: hidden;
   text-align: center;
-  padding: 15px 345px 15px 0;
+  padding: 15px 290px 15px 0;
 }
 
 .btn-system {
@@ -718,7 +718,7 @@ nav.preftab {
 
           a {
             line-height: 28px;
-            padding: 0 20px;
+            padding: 0 27px;
             font-weight: normal;
             color: #b3b3b3;
           }
